[package]
name = "elenar2"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
ratatui = "0.30.0"
reqwest = "0.13.1"
scraper = "0.25.0"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tui-scrollview = "0.6.2"
